--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,12 +1,16 @@
-<% content_for :title, "Editing post" %>
+<% content_for :title, "Editando post" %>
 
-<h1>Editing post</h1>
-
-<%= render "form", post: @post %>
-
-<br>
-
-<div>
-  <%= link_to "Show this post", @post %> |
-  <%= link_to "Back to posts", posts_path %>
+<div class="bg-white shadow overflow-hidden sm:rounded-lg">
+  <div class="px-4 py-5 sm:px-6">
+    <h1 class="text-2xl font-bold text-gray-900">Editando post</h1>
+  </div>
+  
+  <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
+    <%= render "form", post: @post %>
+  </div>
+  
+  <div class="border-t border-gray-200 px-4 py-4 sm:px-6 flex space-x-4">
+    <%= link_to "Ver post", @post, class: "text-indigo-600 hover:text-indigo-900" %>
+    <%= link_to "Voltar para posts", posts_path, class: "text-indigo-600 hover:text-indigo-900" %>
+  </div>
 </div>
