--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,11 +1,15 @@
-<% content_for :title, "New post" %>
+<% content_for :title, "Novo post" %>
 
-<h1>New post</h1>
-
-<%= render "form", post: @post %>
-
-<br>
-
-<div>
-  <%= link_to "Back to posts", posts_path %>
+<div class="bg-white shadow overflow-hidden sm:rounded-lg">
+  <div class="px-4 py-5 sm:px-6">
+    <h1 class="text-2xl font-bold text-gray-900">Novo post</h1>
+  </div>
+  
+  <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
+    <%= render "form", post: @post %>
+  </div>
+  
+  <div class="border-t border-gray-200 px-4 py-4 sm:px-6">
+    <%= link_to "Voltar para posts", posts_path, class: "text-indigo-600 hover:text-indigo-900" %>
+  </div>
 </div>
