--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,13 @@
-<%= form_with(model: [ @post, @post.comments.build ]) do |form| %>
+<% if current_user %>
+  <%= form_with(model: [@post, Comment.new]) do |form| %>
     <div class="form-group">
       <%= form.text_area :content, rows: 3, placeholder: "Adicione um comentário...", class: "form-control" %>
     </div>
     <%= form.submit "Comentar", class: "btn btn-primary" %>
   <% end %>
+<% else %>
+  <div class="alert alert-info">
+    <p>Para comentar, por favor <%= link_to "faça login", login_path, class: "alert-link" %>.</p>
+  </div>
+<% end %>
   
