--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,15 +1,15 @@
-<% content_for :title, "Novo post" %>
+<% content_for :title , "Novo post" %>
 
-<div class="bg-white shadow-lg rounded-xl overflow-hidden border border-gray-100 max-w-4xl mx-auto">
-  <div class="px-6 py-6 bg-gradient-to-r from-blue-500 to-indigo-600">
-    <h1 class="text-2xl font-bold text-white">Novo post</h1>
+<div class="bg-white shadow-lg rounded-xl overflow-hidden border border-gray-100 max-w-4xl mx-auto w-full px-4 sm:px-0">
+  <div class="px-4 sm:px-6 py-6 bg-gradient-to-r from-blue-500 to-indigo-600">
+    <h1 class="text-xl sm:text-2xl font-bold text-white">Novo post</h1>
   </div>
   
-  <div class="px-6 py-6">
+  <div class="px-4 sm:px-6 py-6">
     <%= render "form", post: @post %>
   </div>
   
-  <div class="border-t border-gray-200 px-6 py-4 flex space-x-4 bg-gray-50">
+  <div class="border-t border-gray-200 px-4 sm:px-6 py-4 flex space-x-4 bg-gray-50">
     <%= link_to posts_path, class: "flex items-center text-blue-600 hover:text-blue-800 font-medium" do %>
       <span class="material-icons text-sm mr-1">arrow_back</span>
       <span>Voltar para posts</span>
